2011-02-28  Adam Roben  <aroben@apple.com>

        Rename DrawingArea[Proxy]Impl's "state ID" concept to "backing store state ID"

        Rubber-stamped (and suggested) by Anders Carlsson.

        * UIProcess/DrawingAreaProxy.h:
        * UIProcess/DrawingAreaProxy.messages.in:
        * UIProcess/DrawingAreaProxyImpl.cpp:
        * UIProcess/DrawingAreaProxyImpl.h:
        * WebProcess/WebPage/DrawingArea.h:
        * WebProcess/WebPage/DrawingArea.messages.in:
        * WebProcess/WebPage/DrawingAreaImpl.cpp:
        * WebProcess/WebPage/DrawingAreaImpl.h:
        Perform the rename.

2011-02-28  Adam Roben  <aroben@apple.com>

        Decouple state changes from sending of UpdateState messages in DrawingAreaProxyImpl

        The new DrawingAreaProxyImpl::stateDidChange function should be called whenever
        DrawingAreaProxyImpl's state changes in a way that will require allocating a new backing
        store. (Currently, this is just when the size changes.) This function will sometimes (but
        not always, as when we're waiting for a DidUpdateState message) send an UpdateState message
        to the web process. This means it's now possible for the state IDs sent in consecutive
        UpdateState messages to increase by more than one, but that's OK.

        This should cause no change in behavior.

        Fixes <http://webkit.org/b/55382> DrawingAreaProxyImpl's state ID should be updated whenever
        its state changes, not just when we send an UpdateState message

        Reviewed by Anders Carlsson.

        * UIProcess/DrawingAreaProxyImpl.cpp:
        (WebKit::DrawingAreaProxyImpl::DrawingAreaProxyImpl): Updated for rename.
        (WebKit::DrawingAreaProxyImpl::sizeDidChange): Changed to call stateDidChange.
        (WebKit::DrawingAreaProxyImpl::didUpdateState): Updated for rename, and changed to call
        sendUpdateState whenever our state has changed for any reason since the last UpdateState
        message was sent.